@@ -375,6 +375,17 @@ instead.</i></p>
     <td align="center" valign="top">all</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">useexternalfile</td>
+    <td valign="top">indicates whether the sourcefile name specified
+      in srcfiles or as nested source elements should be written to a
+      temporary file to make the command line shorter. Also applies to
+      the package names specified via the packagenames attribute or
+      nested package elements.
+      (<code>yes</code> | <code>no</code>). Default is no.</td>
+    <td align="center" valign="top">all</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 
 <h4><a name="groupattribute">Format of the group attribute</a></h4>
